# azure-aws-login

./: pyproject.toml
azure_aws_login/: cli.py
